<resources>
    <string name="app_name">Nutricion</string>
    <string name="codigo_paciente">Codigo paciente</string>
    <string name="contrase_a">Contraseña</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_IMC">IMC</string>
    <string name="nav_harris_benedict">Harris Benedict</string>
    <string name="nav_peso_ideal">Peso Ideal</string>
    <string name="nav_notifications">Notificaciones</string>
    <string name="nav_settings">Configuracion</string>
    <string name="nav_about_us">Sobre Nosotros</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>IMC</item>
        <item>Harris Benedict</item>
        <item>Peso Ideal</item>
        <item>Notificaciones</item>
        <item>Configuracion</item>
    </string-array>

    <string name="activity_title_about_us">Sobre Nosotros</string>
    <string name="activity_title_privacy_policy">Politicas de Privacidad</string>
    <string name="action_clear_all">Limpiar todo</string>
    <string name="action_logout">Salir</string>
    <string name="action_mark_all_read">Marcar todo como leido</string>
    <string name="privacy_policy">Politicas de Privacidad</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
